deployment changed to cyclic

--- a/index.html
+++ b/index.html
@@ -997,7 +997,7 @@
         redirect: 'follow'
       };
 
-      fetch("https://cruxhandle.onrender.com/send_mail", requestOptions)
+      fetch("https://blush-gecko-veil.cyclic.app/send_mail", requestOptions)
         .then(response => {
           if (response.ok) {
             return response.text();
