--- a/index.html
+++ b/index.html
@@ -904,7 +904,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Arsha</h3>
+            <h3>CRUXHANDLE</h3>
             <p>Ahmedabad, Gujarat
               <br>
               India <br><br>
