--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
             <h3>A Vision for Growth and Productivity</h3>
-            <p class="fst-italic">
+            <p>
               Aakash&#39;s goal is simple yet powerful: to empower small-scale staffing firms by providing cost-
               effective solutions that optimize their operations. By leveraging the advantages of offshore
               recruitment services, including access to affordable labour and comprehensive recruitment support,
@@ -430,7 +430,7 @@
         <div class="row content">
           <div class="col-lg-6">
             <p>
-            <h6>Partnering for Success:</h6>
+            <h3>Partnering for Success</h3>
 
             At CRUXHANDLE, Aakash and his dedicated team are committed to building strong and enduring
             partnerships with their clients. By fostering open communication, transparency, and trust, they
@@ -442,7 +442,7 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-            <h6>Driving Recruitment Excellence</h6>
+            <h3>Driving Recruitment Excellence</h3>
 
             With Aakash&#39;s unwavering dedication and a relentless pursuit of excellence, CRUXHANDLE aims to
             set new standards in the RPO industry. Aakash&#39;s passion for recruitment, combined with his
