--- a/index.html
+++ b/index.html
@@ -404,7 +404,10 @@
 
         <div class="row">
           <div class="col-lg-6 d-flex align-items-center" data-aos="fade-right" data-aos-delay="100">
-            <img src="assets/img/skills.png" class="img-fluid" alt="">
+            <figure>
+            <img src="assets/img/ak.jpg" class="img-fluid" alt="">
+            <figcaption style="text-align: center;"><b>Aakash Kshatriya</b><br>Managing Director</figcaption>
+            </figure>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
             <h3>A Vision for Growth and Productivity</h3>
