--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1"
           data-aos="fade-up" data-aos-delay="200">
           <h1>Welcome to CRUXHANDLE</h1>
-          <h2>Unleash the Power of Offshore Recruitment with CRUXHANDLE – Your trusted Recruitment Process
+          <h2><b>Unleash the Power of Offshore Recruitment with CRUXHANDLE</b> – Your trusted Recruitment Process
             Outsourcing (RPO) Partner. Based in India, we specialize in delivering unparalleled offshore
             recruitment services to recruitment firms in the United Kingdom. With our innovative approach and
             unwavering commitment, we revolutionize the way you source, attract, and secure top talent.</h2>
-          <h2>Discover a World of Possibilities:
+          <h2><b>Discover a World of Possibilities</b>
             <br>
             At CRUXHANDLE, we understand the challenges faced by recruitment firms in today&#39;s dynamic
             market. We&#39;re here to empower you with game-changing solutions that elevate your recruitment
@@ -199,7 +199,7 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
             <h3>Sectors</h3>
-            <p class="fst-italic">
+            <p>
               We understand the diverse needs of staffing firms in different industries and strive to provide
               tailored recruitment services to meet their specific requirements. Here are the sectors where we
               specialize in offering our recruitment services:
@@ -207,16 +207,16 @@
 
             <div class="col-lg-6">
               <ul>
-                <li><i class="ri-check-double-line"></i> Information Technology (IT)</li>
-                <li><i class="ri-check-double-line"></i> Finance and Accounting</li>
-                <li><i class="ri-check-double-line"></i> Engineering</li>
-                <li><i class="ri-check-double-line"></i> Sales and Marketing</li>
-                <li><i class="ri-check-double-line"></i> Retail and Hospitality</li>
-                <li><i class="ri-check-double-line"></i> Construction and Property</li>
+                <li><i class="ri-check-double-line"></i><b>Information Technology (IT)</b></li>
+                <li><i class="ri-check-double-line"></i><b>Finance and Accounting</b></li>
+                <li><i class="ri-check-double-line"></i><b>Engineering</b></li>
+                <li><i class="ri-check-double-line"></i><b>Sales and Marketing</b></li>
+                <li><i class="ri-check-double-line"></i><b>Retail and Hospitality</b></li>
+                <li><i class="ri-check-double-line"></i><b>Construction and Property</b></li>
               </ul>
             </div>
 
-            <p class="fst-italic">
+            <p>
               These are the primary sectors where we operate within the recruitment industry in the United
               Kingdom. We understand the unique demands and challenges of each sector and strive to provide
               effective recruitment solutions that help our clients find the best talent for their organizations.
@@ -358,7 +358,7 @@
             <p>
             <h6>Our Team </h6>
 
-            Meet Aakash Kshatriya: Empowering Small-Scale Staffing Firms to Reach New Heights
+            Meet Aakash Kshatriya: Empowering Small-Scale Staffing Firms to Reach New Heights.
 
             Aakash Kshatriya, a seasoned recruiter with a specialization in the Information and Technology
             sector, brings a wealth of experience and a fresh perspective to the world of recruitment. With a
@@ -406,7 +406,7 @@
           <div class="col-lg-6 d-flex align-items-center" data-aos="fade-right" data-aos-delay="100">
             <figure>
             <img src="assets/img/ak.jpg" class="img-fluid" alt="">
-            <figcaption style="text-align: center;"><b>Aakash Kshatriya</b><br>Managing Director</figcaption>
+            <figcaption style="text-align: center;"><b>AAKASH KSHATRIYA</b><br>Managing Director</figcaption>
             </figure>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
