--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             Outsourcing (RPO) Partner. Based in India, we specialize in delivering unparalleled offshore
             recruitment services to recruitment firms in the United Kingdom. With our innovative approach and
             unwavering commitment, we revolutionize the way you source, attract, and secure top talent.</h2>
-          <h2><b>Discover a World of Possibilities</b>
+          <h2><b>Discover a World of Possibilities</b> -
             <br>
             At CRUXHANDLE, we understand the challenges faced by recruitment firms in today&#39;s dynamic
             market. We&#39;re here to empower you with game-changing solutions that elevate your recruitment
