--- a/index.html
+++ b/index.html
@@ -931,8 +931,7 @@
             <h4>Our Social Networks</h4>
             <p>You can also connect with us on social media platforms</p>
             <div class="social-links mt-3">
-              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <a href="https://www.linkedin.com/company/cruxhandle/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
             </div>
           </div>
 
