--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
           <div class="col-lg-6 d-flex align-items-center" data-aos="fade-right" data-aos-delay="100">
             <figure>
             <img src="assets/img/ak.jpg" class="img-fluid" alt="">
-            <figcaption style="text-align: center;"><b>AAKASH KSHATRIYA</b><br>Managing Director</figcaption>
+            <figcaption style="text-align: center;"><b>AAKASH KSHATRIYA</b><br>Founder & Recruitment Specialist</figcaption>
             </figure>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
