--- a/index.html
+++ b/index.html
@@ -172,14 +172,12 @@
             data-aos-delay="400">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-layer"></i></div>
-              <h4><a href="">Employer Branding and Candidate Experience</a></h4>
-              <p>We assist in enhancing your employer brand and creating a positive candidate experience.
+              <h4><a href="">Comprehensive Recruitment Support</a></h4>
+              <p>Our comprehensive support includes CRM integration, ATS implementation, and database management. We ensure seamless customer relationship management, automate administrative tasks, and maintain organized candidate data.
                 <br>
-                We help you showcase your organization&#39;s values, culture, and unique selling points, attracting top
-                talent to your brand.
+                With our Comprehensive Recruitment Support, clients can focus on core recruitment activities while we handle administrative tasks, database management, and technology integration.
                 <br>
-                We ensure effective communication and timely feedback to candidates, nurturing a positive
-                employer brand reputation.
+                This results in improved efficiency, enhanced candidate experiences, and better recruitment outcomes.
               </p>
             </div>
           </div>
