--- a/index.html
+++ b/index.html
@@ -173,7 +173,9 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-layer"></i></div>
               <h4><a href="">Comprehensive Recruitment Support</a></h4>
-              <p>Our comprehensive support includes CRM integration, ATS implementation, and database management. We ensure seamless customer relationship management, automate administrative tasks, and maintain organized candidate data.
+              <p>Our comprehensive support includes CRM integration, ATS implementation and database management.
+                <br>
+                We ensure seamless customer relationship management, automate administrative tasks, and maintain organized candidate data.
                 <br>
                 With our Comprehensive Recruitment Support, clients can focus on core recruitment activities while we handle administrative tasks, database management, and technology integration.
                 <br>
